# fortinet-firewall-connect

./: .gitignore  README.md  bun.lockb  main.py  package.json  release.sh
.github/workflows/: build-release.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: creds_window.rs  cron.rs  fortinet.rs  handler.rs  main.rs  setup.rs  system_tray.rs  worker.rs
