[package]
name = "fortinet-connect"
version = "0.1.0"
description = "Automatically login to fortinet for wifi access, auto refreshes it so you don't have to do it manually"
authors = ["Rushikesh Pawar"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["test-util"] }
scraper = "0.19.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
