[package]
name = "fortinet-connect"
version = "0.1.1"
description = "Automatically login to fortinet for wifi access, auto refreshes it so you don't have to do it manually"
authors = ["Rushikesh Pawar"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11" }
tokio = { version = "1" }
scraper = "0.19.0"
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "0.4.21"
env_logger = "0.11.3"
chrono = "0.4.37"

[dev-dependencies.tokio]
version = "1"
features = ["full"]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
